added paypal invoice creation

--- a/PaypalTestApp/Web.config
+++ b/PaypalTestApp/Web.config
@@ -4,11 +4,18 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  
+  <configSections>
+    <section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="PayPalLogger" value="PayPal.Log.Log4netLogger" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
@@ -21,7 +28,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -58,4 +65,26 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  
+  <paypal>
+    <settings>
+      <add name="mode" value="sandbox" />
+      <add name="clientId" value="__CLIENT_ID__" />
+      <add name="clientSecret" value="__CLIENT_SECRET__" />
+    </settings>
+  </paypal>
+
+  <log4net>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="my_app.log" />
+      <appendToFile value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="FileAppender" />
+    </root>
+  </log4net>
 </configuration>
