--- a/PaypalTestApp/packages.config
+++ b/PaypalTestApp/packages.config
@@ -20,7 +20,9 @@
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Modernizr" version="2.6.2" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
+  <package id="PayPal" version="1.9.1" targetFramework="net462" />
   <package id="Respond" version="1.2.0" targetFramework="net462" />
+  <package id="Stripe.net" version="14.0.0" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
 </packages>
